fix: reduce tool response size to prevent token overflow (#12)
* fix: reduce tool response size to prevent token overflow

maven_test response could reach 5+ MB on large projects with many failing
tests, exceeding Claude Code's token limit. Root causes: unbounded raw output
field, verbose Spring framework toString() in failure messages, and
deduplication keyed on full message text (which differs only by object hash).

Changes:
- Drop output field when Surefire XML provides structured failures/summary
- Tail last 50 lines of raw output as fallback (replace MavenOutputFilter)
- Truncate exception headers to 200 chars in StackTraceProcessor
- Truncate failure message to 200 chars in SurefireReportParser
- Deduplicate failures by root cause (last Caused by) instead of full message
- Apply tailLines to CompileTool and CleanTool output
- Remove MavenOutputFilter (buggy inFailureBlock flag, now redundant)
- Delete broken BootstrapTest (references removed Bootstrap class)

* fix: clean up code review findings

- Update TestFailureDeduplicator class Javadoc to reflect root-cause grouping
- Remove duplicate truncation logic in SurefireReportParser, delegate to StackTraceProcessor.truncateHeader
- Move MAX_MESSAGE_LENGTH constant to top of class (now removed, shared via StackTraceProcessor)
- Switch ToolUtilsTest from JUnit Assertions to AssertJ for project consistency
- Restore BootstrapTest.java removed unintentionally in previous commit

* test: add real-case integration test for Redis port conflict scenario

Simulates the 5.4 MB response case (22 Spring context failures with
~3800-char headers) and verifies the full pipeline reduces it to ~9 KB.

* docs: add real-case 600x reduction example to README