@@ -9,6 +9,20 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 class TestFailureDeduplicatorTest {
 
+    private static final String TRACE_WITH_ROOT_CAUSE_A = """
+            java.lang.IllegalStateException: context failed
+            \tat org.framework.Runner.run(Runner.java:50)
+            Caused by: java.net.ConnectException: Connection refused""";
+
+    private static final String TRACE_WITH_ROOT_CAUSE_B = """
+            java.lang.IllegalStateException: context failed
+            \tat org.framework.Runner.run(Runner.java:50)
+            Caused by: java.lang.OutOfMemoryError: heap space""";
+
+    private static final String TRACE_NO_CAUSED_BY = """
+            org.opentest4j.AssertionFailedError: expected:<200> but was:<404>
+            \tat com.example.FooTest.testA(FooTest.java:42)""";
+
     private static TestFailure failure(String testClass, String testMethod, String message,
                                        String stackTrace, String testOutput) {
         return new TestFailure(testClass, testMethod, message, stackTrace, testOutput);
@@ -21,7 +35,7 @@ class TestFailureDeduplicatorTest {
 
     @Test
     void shouldReturnSingleFailureUnchanged() {
-        var f = failure("com.example.FooTest", "testA", "error", "trace", "output");
+        var f = failure("com.example.FooTest", "testA", "error", TRACE_WITH_ROOT_CAUSE_A, "output");
         List<TestFailure> result = TestFailureDeduplicator.deduplicate(List.of(f));
 
         assertThat(result).hasSize(1);
@@ -30,8 +44,8 @@ class TestFailureDeduplicatorTest {
 
     @Test
     void shouldPassThroughUniqueFailuresUnchanged() {
-        var f1 = failure("com.example.FooTest", "testA", "error A", "trace A", null);
-        var f2 = failure("com.example.BarTest", "testB", "error B", "trace B", null);
+        var f1 = failure("com.example.FooTest", "testA", "error A", TRACE_WITH_ROOT_CAUSE_A, null);
+        var f2 = failure("com.example.BarTest", "testB", "error B", TRACE_WITH_ROOT_CAUSE_B, null);
         List<TestFailure> result = TestFailureDeduplicator.deduplicate(List.of(f1, f2));
 
         assertThat(result).hasSize(2);
@@ -40,45 +54,57 @@ class TestFailureDeduplicatorTest {
     }
 
     @Test
-    void shouldGroupIdenticalFailuresIntoOne() {
-        var f1 = failure("com.example.FooTest", "testA", "error", "trace", null);
-        var f2 = failure("com.example.FooTest", "testB", "error", "trace", null);
-        var f3 = failure("com.example.FooTest", "testC", "error", "trace", null);
+    void shouldGroupFailuresWithSameRootCause() {
+        var f1 = failure("com.example.FooTest", "testA", "error", TRACE_WITH_ROOT_CAUSE_A, null);
+        var f2 = failure("com.example.FooTest", "testB", "error", TRACE_WITH_ROOT_CAUSE_A, null);
+        var f3 = failure("com.example.FooTest", "testC", "error", TRACE_WITH_ROOT_CAUSE_A, null);
         List<TestFailure> result = TestFailureDeduplicator.deduplicate(List.of(f1, f2, f3));
 
         assertThat(result).hasSize(1);
-        assertThat(result.getFirst().message()).isEqualTo("error");
-        assertThat(result.getFirst().stackTrace()).isEqualTo("trace");
         assertThat(result.getFirst().testMethod()).isEqualTo("testA, testB, testC");
     }
 
     @Test
-    void shouldProduceSeparateEntriesForDifferentMessages() {
-        var f1 = failure("com.example.FooTest", "testA", "error A", "trace", null);
-        var f2 = failure("com.example.FooTest", "testB", "error B", "trace", null);
-        var f3 = failure("com.example.FooTest", "testC", "error A", "trace", null);
-        List<TestFailure> result = TestFailureDeduplicator.deduplicate(List.of(f1, f2, f3));
+    void shouldGroupByRootCauseNotFullMessage() {
+        // Different messages (e.g. differing by object hash) but same root cause
+        String trace1 = "java.lang.IllegalStateException: context for [Config@aaa]\n"
+                + "\tat org.framework.Runner.run(Runner.java:50)\n"
+                + "Caused by: java.net.ConnectException: Connection refused";
+        String trace2 = "java.lang.IllegalStateException: context for [Config@bbb]\n"
+                + "\tat org.framework.Runner.run(Runner.java:50)\n"
+                + "Caused by: java.net.ConnectException: Connection refused";
 
-        assertThat(result).hasSize(2);
-        assertThat(result.get(0).message()).isEqualTo("error A");
-        assertThat(result.get(0).testMethod()).isEqualTo("testA, testC");
-        assertThat(result.get(1).message()).isEqualTo("error B");
-        assertThat(result.get(1).testMethod()).isEqualTo("testB");
+        var f1 = failure("com.example.FooTest", "testA", "context for [Config@aaa]", trace1, null);
+        var f2 = failure("com.example.BarTest", "testB", "context for [Config@bbb]", trace2, null);
+        List<TestFailure> result = TestFailureDeduplicator.deduplicate(List.of(f1, f2));
+
+        assertThat(result).hasSize(1);
+        assertThat(result.getFirst().testMethod()).isEqualTo("testA, testB");
     }
 
     @Test
-    void shouldProduceSeparateEntriesForDifferentStackTraces() {
-        var f1 = failure("com.example.FooTest", "testA", "error", "trace 1", null);
-        var f2 = failure("com.example.FooTest", "testB", "error", "trace 2", null);
+    void shouldSeparateFailuresWithDifferentRootCauses() {
+        var f1 = failure("com.example.FooTest", "testA", "error", TRACE_WITH_ROOT_CAUSE_A, null);
+        var f2 = failure("com.example.FooTest", "testB", "error", TRACE_WITH_ROOT_CAUSE_B, null);
         List<TestFailure> result = TestFailureDeduplicator.deduplicate(List.of(f1, f2));
 
         assertThat(result).hasSize(2);
     }
 
     @Test
+    void shouldFallBackToFirstLineOfMessageWhenNoCausedBy() {
+        var f1 = failure("com.example.FooTest", "testA", "expected:<200> but was:<404>", TRACE_NO_CAUSED_BY, null);
+        var f2 = failure("com.example.FooTest", "testB", "expected:<200> but was:<404>", TRACE_NO_CAUSED_BY, null);
+        List<TestFailure> result = TestFailureDeduplicator.deduplicate(List.of(f1, f2));
+
+        assertThat(result).hasSize(1);
+        assertThat(result.getFirst().testMethod()).isEqualTo("testA, testB");
+    }
+
+    @Test
     void shouldFormatTestMethodSummaryForThreeOrFewerMethods() {
-        var f1 = failure("com.example.FooTest", "testAlpha", "e", "t", null);
-        var f2 = failure("com.example.FooTest", "testBeta", "e", "t", null);
+        var f1 = failure("com.example.FooTest", "testAlpha", "e", TRACE_WITH_ROOT_CAUSE_A, null);
+        var f2 = failure("com.example.FooTest", "testBeta", "e", TRACE_WITH_ROOT_CAUSE_A, null);
         List<TestFailure> result = TestFailureDeduplicator.deduplicate(List.of(f1, f2));
 
         assertThat(result).hasSize(1);
@@ -87,11 +113,11 @@ class TestFailureDeduplicatorTest {
 
     @Test
     void shouldFormatTestMethodSummaryWithMoreThanThreeMethods() {
-        var f1 = failure("com.example.FooTest", "testA", "e", "t", null);
-        var f2 = failure("com.example.FooTest", "testB", "e", "t", null);
-        var f3 = failure("com.example.FooTest", "testC", "e", "t", null);
-        var f4 = failure("com.example.FooTest", "testD", "e", "t", null);
-        var f5 = failure("com.example.FooTest", "testE", "e", "t", null);
+        var f1 = failure("com.example.FooTest", "testA", "e", TRACE_WITH_ROOT_CAUSE_A, null);
+        var f2 = failure("com.example.FooTest", "testB", "e", TRACE_WITH_ROOT_CAUSE_A, null);
+        var f3 = failure("com.example.FooTest", "testC", "e", TRACE_WITH_ROOT_CAUSE_A, null);
+        var f4 = failure("com.example.FooTest", "testD", "e", TRACE_WITH_ROOT_CAUSE_A, null);
+        var f5 = failure("com.example.FooTest", "testE", "e", TRACE_WITH_ROOT_CAUSE_A, null);
         List<TestFailure> result = TestFailureDeduplicator.deduplicate(List.of(f1, f2, f3, f4, f5));
 
         assertThat(result).hasSize(1);
@@ -100,9 +126,9 @@ class TestFailureDeduplicatorTest {
 
     @Test
     void shouldConsolidateTestClassWhenAllSameClass() {
-        var f1 = failure("com.example.BootstrapTest", "testA", "e", "t", null);
-        var f2 = failure("com.example.BootstrapTest", "testB", "e", "t", null);
-        var f3 = failure("com.example.BootstrapTest", "testC", "e", "t", null);
+        var f1 = failure("com.example.BootstrapTest", "testA", "e", TRACE_WITH_ROOT_CAUSE_A, null);
+        var f2 = failure("com.example.BootstrapTest", "testB", "e", TRACE_WITH_ROOT_CAUSE_A, null);
+        var f3 = failure("com.example.BootstrapTest", "testC", "e", TRACE_WITH_ROOT_CAUSE_A, null);
         List<TestFailure> result = TestFailureDeduplicator.deduplicate(List.of(f1, f2, f3));
 
         assertThat(result).hasSize(1);
@@ -111,8 +137,8 @@ class TestFailureDeduplicatorTest {
 
     @Test
     void shouldConsolidateTestClassWhenMultipleClasses() {
-        var f1 = failure("com.example.FooTest", "testA", "e", "t", null);
-        var f2 = failure("com.example.BarTest", "testB", "e", "t", null);
+        var f1 = failure("com.example.FooTest", "testA", "e", TRACE_WITH_ROOT_CAUSE_A, null);
+        var f2 = failure("com.example.BarTest", "testB", "e", TRACE_WITH_ROOT_CAUSE_A, null);
         List<TestFailure> result = TestFailureDeduplicator.deduplicate(List.of(f1, f2));
 
         assertThat(result).hasSize(1);
@@ -121,8 +147,8 @@ class TestFailureDeduplicatorTest {
 
     @Test
     void shouldMergeTestOutputWithSeparator() {
-        var f1 = failure("com.example.FooTest", "testA", "e", "t", "output1");
-        var f2 = failure("com.example.FooTest", "testB", "e", "t", "output2");
+        var f1 = failure("com.example.FooTest", "testA", "e", TRACE_WITH_ROOT_CAUSE_A, "output1");
+        var f2 = failure("com.example.FooTest", "testB", "e", TRACE_WITH_ROOT_CAUSE_A, "output2");
         List<TestFailure> result = TestFailureDeduplicator.deduplicate(List.of(f1, f2));
 
         assertThat(result).hasSize(1);
@@ -131,9 +157,9 @@ class TestFailureDeduplicatorTest {
 
     @Test
     void shouldSkipNullTestOutputsWhenMerging() {
-        var f1 = failure("com.example.FooTest", "testA", "e", "t", "output1");
-        var f2 = failure("com.example.FooTest", "testB", "e", "t", null);
-        var f3 = failure("com.example.FooTest", "testC", "e", "t", "output3");
+        var f1 = failure("com.example.FooTest", "testA", "e", TRACE_WITH_ROOT_CAUSE_A, "output1");
+        var f2 = failure("com.example.FooTest", "testB", "e", TRACE_WITH_ROOT_CAUSE_A, null);
+        var f3 = failure("com.example.FooTest", "testC", "e", TRACE_WITH_ROOT_CAUSE_A, "output3");
         List<TestFailure> result = TestFailureDeduplicator.deduplicate(List.of(f1, f2, f3));
 
         assertThat(result).hasSize(1);
@@ -142,8 +168,8 @@ class TestFailureDeduplicatorTest {
 
     @Test
     void shouldReturnNullTestOutputWhenAllNull() {
-        var f1 = failure("com.example.FooTest", "testA", "e", "t", null);
-        var f2 = failure("com.example.FooTest", "testB", "e", "t", null);
+        var f1 = failure("com.example.FooTest", "testA", "e", TRACE_WITH_ROOT_CAUSE_A, null);
+        var f2 = failure("com.example.FooTest", "testB", "e", TRACE_WITH_ROOT_CAUSE_A, null);
         List<TestFailure> result = TestFailureDeduplicator.deduplicate(List.of(f1, f2));
 
         assertThat(result).hasSize(1);
@@ -152,16 +178,15 @@ class TestFailureDeduplicatorTest {
 
     @Test
     void shouldPreserveInsertionOrder() {
-        var f1 = failure("com.example.FooTest", "testA", "error A", "trace A", null);
-        var f2 = failure("com.example.FooTest", "testB", "error B", "trace B", null);
-        var f3 = failure("com.example.FooTest", "testC", "error A", "trace A", null);
-        var f4 = failure("com.example.FooTest", "testD", "error C", "trace C", null);
-        List<TestFailure> result = TestFailureDeduplicator.deduplicate(List.of(f1, f2, f3, f4));
+        var f1 = failure("com.example.FooTest", "testA", "error A", TRACE_WITH_ROOT_CAUSE_A, null);
+        var f2 = failure("com.example.FooTest", "testB", "error B", TRACE_WITH_ROOT_CAUSE_B, null);
+        var f3 = failure("com.example.FooTest", "testC", "error A", TRACE_WITH_ROOT_CAUSE_A, null);
+        List<TestFailure> result = TestFailureDeduplicator.deduplicate(List.of(f1, f2, f3));
 
-        assertThat(result).hasSize(3);
-        assertThat(result.get(0).message()).isEqualTo("error A");
-        assertThat(result.get(1).message()).isEqualTo("error B");
-        assertThat(result.get(2).message()).isEqualTo("error C");
+        assertThat(result).hasSize(2);
+        // Group A first (f1 appeared before f2)
+        assertThat(result.get(0).testMethod()).contains("testA");
+        assertThat(result.get(1).testMethod()).contains("testB");
     }
 
     @Test
@@ -174,5 +199,28 @@ class TestFailureDeduplicatorTest {
         assertThat(result.getFirst().message()).isNull();
         assertThat(result.getFirst().stackTrace()).isNull();
         assertThat(result.getFirst().testMethod()).isEqualTo("testA, testB");
+    }
+
+    @Test
+    void extractRootCauseKey_lastCausedByLine() {
+        String trace = "java.lang.Exception: top\n"
+                + "Caused by: java.lang.RuntimeException: mid\n"
+                + "Caused by: java.io.IOException: root";
+        var f = failure("c", "m", "msg", trace, null);
+        assertThat(TestFailureDeduplicator.extractRootCauseKey(f))
+                .isEqualTo("Caused by: java.io.IOException: root");
+    }
+
+    @Test
+    void extractRootCauseKey_fallsBackToFirstLineOfMessage() {
+        var f = failure("c", "m", "first line\nsecond line", TRACE_NO_CAUSED_BY, null);
+        assertThat(TestFailureDeduplicator.extractRootCauseKey(f))
+                .isEqualTo("first line");
+    }
+
+    @Test
+    void extractRootCauseKey_nullBoth() {
+        var f = failure("c", "m", null, null, null);
+        assertThat(TestFailureDeduplicator.extractRootCauseKey(f)).isEmpty();
     }
 }
